[CMAKE][STR2STR] - adding pthread lib (needed for linux compilation) and lowering the cmake minimum required

--- a/app/consapp/str2str/CMakeLists.txt
+++ b/app/consapp/str2str/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.5)
 
 project(str2str)
 
@@ -17,4 +17,5 @@ add_executable(
 )
 
 target_link_libraries(str2str m)
-target_link_libraries(str2str System.B)
+target_link_libraries(str2str pthread)
+# target_link_libraries(str2str System.B)
